syntax = "proto3";
package DramaScript;

message DramaScriptNodeDataContainer
{
	string typeName = 1;
	bytes buffers = 2;
}

message DramaScriptEdgeData
{
	int32 inputNodeId = 1;
	int32 inputPortId = 2;
	int32 outputNodeId = 3;
	int32 outputPortId = 4;
}

message DramaScriptGraphData
{
	repeated DramaScriptNodeDataContainer nodeContainerList = 1;
	repeated DramaScriptEdgeData edgeList = 2;
}

message DramaScriptNodeDataEntry
{
	int32 id = 1;
}

message DramaScriptNodeDataExit
{
	int32 id = 1;
}

message DramaScriptNodeDataTimeEntry
{
	int32 id = 1;
	float Time = 2;
}

message DramaScriptNodeDataPlayAnimation
{
	int32 id = 1;
	string AnimationName = 2;
	float Speed = 3;
}
